--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,15 +18,4 @@ add_library(graph
   queue.cpp
 )
 
-
-macro(add_unit_test target)
-  add_executable(${target} ${ARGN})
-  target_link_libraries(${target} graph)
-  add_test(${target} ${target})
-endmacro()
-
-
-add_subdirectory(graph.test)
-add_subdirectory(digraph.test)
-add_subdirectory(dfs.test)
-add_subdirectory(queue.test)
+add_executable(currency arbitage.cpp)
